--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.2",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.0",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.6.2",
     "react-router-dom": "^6.6.2",
+    "redux": "^4.2.0",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "svg-url-loader": "^8.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
