--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@font/nunito": "^1.0.3",
     "@mui/material": "^5.11.4",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
